# Classify-Card-Images

./: .gitignore  LICENSE  README.md  create_model.py  environment.yml  main.py  pyproject.toml  training_loop.py
models/: card_classifier.py  playing_card_dataset.py
pytorch_output/: create_model.py  training_loop.py
