[tool.poetry]
name = "ai-resume-suitability"
version = "0.1.0"
description = ""
authors = ["Simon H. <professional.simonhossain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
