[tool.poetry]
name = "ai-resume-suitability"
version = "0.1.0"
description = ""
authors = ["Simon H. <professional.simonhossain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
numpy = "^1.26.4"
setuptools = "^69.5.1"
mpmath = "^1.3.0"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
